update: added request validations for documents and swagger documentation
